make sure the custom tool icon are well align

--- a/src/components/CanvasPage.css
+++ b/src/components/CanvasPage.css
@@ -111,8 +111,8 @@
 }
 
 .pin-toolbar-icon {
-  width: 100%;
-  height: 100%;
+  width: 18px;
+  height: 18px;
   position: relative;
 }
 
@@ -161,8 +161,8 @@
 }
 
 .camera-toolbar-icon {
-  width: 100%;
-  height: 100%;
+  width: 18px;
+  height: 18px;
   position: relative;
 }
 
